<resources>
    <string name="app_name">Origami</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_upload_file">Upload a File</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_account_edit">Edit Profile</string>
    <string name="notification_fail">Image failed to upload.</string>
    <string name="notification_share_link">Share link</string>
    <string name="notifaction_success">Successfully uploaded</string>
    <string name="notification_progress">Uploading image...</string>
    <string name="title_activity_edit_tags">Edit Tags</string>
    <string name="choose_category">Choose the category your group best falls under.</string>

    <string name="group1">Project</string>
    <string name="group2">Sports</string>
    <string name="group3">Career</string>
    <string name="group4">Misc. Interest</string>
    <string name="group5">Academic Subject</string>

    <string name="home">Dashboard</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="groups">Groups</string>
    <string name="account">You</string>

    <color name="lightBlue">#71C9F1</color>
    <color name="paleBlue">#A8E0FF</color>
    <color name="darkBlue">#1C376C</color>
    <color name="blue">#2F5BB5</color>
    <color name="pink">#AD7A99</color>
    <color name="darkPink">#5F4354</color>
    <color name="grey">#ADBABD</color>
    <color name="darkPurple">#4A4063</color>

    <item name="skyBlue" type="color">#33B5E5</item>
    <item name="purple" type="color">#AA66CC</item>
    <item name="green" type="color">#99CC00</item>
    <item name="lightOrange" type="color">#FFBB33</item>
    <item name="red" type="color">#E2485A</item>

</resources>
