<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:checkable="false"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/magnify"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload"
        android:enabled="true"
        android:icon="@drawable/upload"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_groups"
        android:enabled="true"
        android:icon="@drawable/group"
        android:title="@string/groups"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>