<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="clairecw.example.admin.superclassy.ChooseCategory">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_category"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:id="@+id/row1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/green"
            android:background="@drawable/proj"
            android:text="@string/group1"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/orange"
            android:background="@drawable/sport"
            android:text="@string/group2"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/red"
            android:background="@drawable/biz"
            android:text="@string/group3"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/row1"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/blue"
            android:background="@drawable/interest"
            android:text="@string/group4"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />


        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/purple"
            android:background="@drawable/subject"
            android:text="@string/group5"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

</RelativeLayout>
